--- a/house model.ipynb
+++ b/house model.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,32 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#　散布図行列を出力\n",
     "# locメソッドで一部の特徴量だけをピックアップ\n",
     "import seaborn as sns\n",
     "sns.pairplot(train_df, size = 3.0)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#これは時間かかるからなし！"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1069,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1845,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,8 +1857,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#0.68以上を5つでやってみる"
@@ -1875,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -1888,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2473,7 @@
        "[1460 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2491,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -2504,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2515,7 @@
        "       [ 118000.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2534,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -2549,7 +2542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2569,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2609,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -2622,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2631,7 +2624,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2644,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2653,7 +2646,7 @@
        "array([-51961.50536969])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2665,7 +2658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2675,7 +2668,7 @@
        "         17200.18383748]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2688,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2705,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2728,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -2743,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2772,7 +2765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2798,8 +2791,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# trainデータを用意\n",
+    "# DataFrameの.valuesメソッドでarrayに変換できます\n",
+    "#一個減らしてもやってみる\n",
+    "X = train_df.loc[:,['OverallQual','GrLivArea','Neighborhood','GarageCars']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2\n",
+      "train: 0.792\n",
+      "test: 0.761\n",
+      "adjusted R^2\n",
+      "train: 0.791324\n",
+      "test : 0.760000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=0)\n",
+    "Ir.fit(X_train,y_train)\n",
+    "print('R^2')\n",
+    "print('train: %.3f' % Ir.score(X_train,y_train))\n",
+    "print('test: %.3f' % Ir.score(X_test,y_test))\n",
+    "def adjusted(score, n_sample, n_features):\n",
+    "    adjusted_score = 1 - (1 - score) * ((n_sample - 1) / (n_sample - n_features - 1))\n",
+    "    return adjusted_score\n",
+    "print('adjusted R^2')\n",
+    "print('train: %3f' % adjusted(Ir.score(X_train, y_train), len(y_train), 2))\n",
+    "print('test : %3f' % adjusted(Ir.score(X_test, y_test), len(y_test), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "下がったので、さっきのでOK."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
